⚡ Added grafana.ini & Dockerfile

--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -1,3 +1,10 @@
+# this is required to proxy Grafana Live WebSocket connections.
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
+
 # web service1 config.
 server {
     listen 80;
@@ -73,11 +80,6 @@ server {
 }
 
 # web grafana config
-# this is required to proxy Grafana Live WebSocket connections.
-map $http_upgrade $connection_upgrade {
-    default upgrade;
-    '' close;
-}
 
 server {
     listen 80;
@@ -107,6 +109,8 @@ server {
             return 204;
         }
 
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
         include /etc/nginx/includes/proxy.conf;
         proxy_pass http://grafana_grafana_1:3000;
     }
@@ -130,6 +134,8 @@ server {
             return 204;
         }
 
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "Upgrade";
         include /etc/nginx/includes/proxy.conf;
         proxy_pass http://grafana_grafana_1:3000;
     }
@@ -140,7 +146,8 @@ server {
     listen 80 default_server;
 
     server_name _;
-    root /var/www/html;
+    #root /var/www/html;
+    root /usr/share/grafana;
 
     charset UTF-8;
 
