⚡ Updated grafana files

--- a/grafana/docker-compose.yml
+++ b/grafana/docker-compose.yml
@@ -2,6 +2,16 @@ version: '2'
 
 services:
   grafana:
-    image: grafana/grafana
+    #image: grafana/grafana
+    build:
+      context: ./
+      dockerfile: Dockerfile
+      #container_name: grafana
     ports:
       - 3000:3000
+    volumes:
+      - ./grafana.ini:/etc/grafana/grafana.ini
+      - grafana-storage:/var/lib/grafana
+volumes:
+  grafana-storage:
+    external: true
