--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -1,4 +1,8 @@
 [server]
-domain = localhost
-root_url = %(protocol)s://%(domain)s:%(http_port)s
-serve_from_sub_path = true
+domain = grafana.test
+root_url = http://grafana.test/
+
+[security]
+cookie_samesite = none
+cookie_secure = true
+allow_embedding = true
