--- a/proxy/default.conf
+++ b/proxy/default.conf
@@ -146,8 +146,7 @@ server {
     listen 80 default_server;
 
     server_name _;
-    #root /var/www/html;
-    root /usr/share/grafana;
+    root /var/www/html;
 
     charset UTF-8;
 
