⚡ Updated grafana nginx ssl reverse proxy

--- a/grafana/grafana.ini
+++ b/grafana/grafana.ini
@@ -1,6 +1,6 @@
 [server]
-domain = grafana.test
-root_url = http://grafana.test/
+domain = grafana.local
+root_url = https://grafana.local/
 
 [security]
 cookie_samesite = none
