--- a/proxy/conf/default.conf
+++ b/proxy/conf/default.conf
@@ -4,17 +4,16 @@ map $http_upgrade $connection_upgrade {
     '' close;
 }
 
-
-# web service1 config.
+# Web service1 config.
 server {
     listen 80;
     listen 443 ssl http2;
-    server_name example1.test;
+    listen [::]:443 ssl http2;
+    server_name myapp.local;
 
-    # Path for SSL config/key/certificate
-    ssl_certificate /etc/ssl/certs/nginx/example1.crt;
-    ssl_certificate_key /etc/ssl/certs/nginx/example1.key;
-    include /etc/nginx/includes/ssl.conf;
+    ssl_certificate /etc/nginx/ssl/ssl.crt;
+    ssl_certificate_key /etc/nginx/ssl/ssl.key;
+    ssl_protocols TLSv1.2;
 
     location / {
 
@@ -40,18 +39,19 @@ server {
 
     access_log off;
     error_log /var/log/nginx/error.log error;
+
 }
 
-# web service2 config.
+# Web service2 config.
 server {
     listen 80;
     listen 443 ssl http2;
-    server_name example2.test;
+    listen [::]:443 ssl http2;
+    server_name myapp2.local;
 
-    # Path for SSL config/key/certificate
-    ssl_certificate /etc/ssl/certs/nginx/example2.crt;
-    ssl_certificate_key /etc/ssl/certs/nginx/example2.key;
-    include /etc/nginx/includes/ssl.conf;
+    ssl_certificate /etc/nginx/ssl/ssl2.crt;
+    ssl_certificate_key /etc/nginx/ssl/ssl2.key;
+    ssl_protocols TLSv1.2;
 
     location / {
 
@@ -77,29 +77,29 @@ server {
 
     access_log off;
     error_log /var/log/nginx/error.log error;
+
 }
 
-# web grafana config
-
+# Grafana config.
 server {
     listen 80;
     listen 443 ssl http2;
-    server_name grafana.test;
+    listen [::]:443 ssl http2;
+    server_name grafana.local;
 
-    # Path for SSL config/key/certificate
-    ssl_certificate /etc/ssl/certs/nginx/grafana.crt;
-    ssl_certificate_key /etc/ssl/certs/nginx/grafana.key;
-    include /etc/nginx/includes/ssl.conf;
+    ssl_certificate /etc/nginx/ssl/grafana.crt;
+    ssl_certificate_key /etc/nginx/ssl/grafana.key;
+    ssl_protocols TLSv1.2;
 
     location / {
 
-        add_header 'Access-Control-Allow-Origin' 'http://localhost:8100';
+        add_header 'Access-Control-Allow-Origin' 'https://localhost:8100';
         add_header 'Access-Control-Allow-Credentials' 'true';
         add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
         add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
 
         if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'http://localhost:8100';
+            add_header 'Access-Control-Allow-Origin' 'https://localhost:8100';
             add_header 'Access-Control-Allow-Credentials' 'true';
             add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
             add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
@@ -115,50 +115,26 @@ server {
         proxy_pass http://grafana_grafana_1:3000;
     }
 
-    # Proxy Grafana Live WebSocket connections.
-    location /api/live {
-
-        add_header 'Access-Control-Allow-Origin' 'http://localhost:8100';
-        add_header 'Access-Control-Allow-Credentials' 'true';
-        add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
-        add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
-
-        if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'http://localhost:8100';
-            add_header 'Access-Control-Allow-Credentials' 'true';
-            add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,Origin,DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range';
-            add_header 'Access-Control-Allow-Methods' 'GET,POST,OPTIONS,PUT,DELETE,PATCH';
-            add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Type' 'text/plain charset=UTF-8';
-            add_header 'Content-Length' 0;
-            return 204;
-        }
-
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        include /etc/nginx/includes/proxy.conf;
-        proxy_pass http://grafana_grafana_1:3000;
-    }
 }
 
 # Default
-server {
-    listen 80 default_server;
+#server {
+#    listen 80 default_server;
 
-    server_name _;
-    root /var/www/html;
+#    server_name _;
+#    root /var/www/html;
 
-    charset UTF-8;
+#    charset UTF-8;
 
-    error_page 404 /backend-not-found.html;
-    location = /backend-not-found.html {
-        allow all;
-    }
-    location / {
-        return 404;
-    }
+#    error_page 404 /backend-not-found.html;
+#    location = /backend-not-found.html {
+#        allow all;
+#    }
+#    location / {
+#        return 404;
+#    }
 
-    access_log off;
-    log_not_found off;
-    error_log /var/log/nginx/error.log error;
-}
+#    access_log off;
+#    log_not_found off;
+#    error_log /var/log/nginx/error.log error;
+#}
